Fix spacing of button in get-started (again)

--- a/css/outer/homeb.less
+++ b/css/outer/homeb.less
@@ -151,7 +151,7 @@ body#home-page {
 
       // needs a high specificity to override defaults
       .main-cta .ctabox a.btn-jumbo {
-        margin: -10p 0 20px 0;
+        margin: -10px 0 20px 0;
         padding: 12px 24px 12px 24px;
         font-size: 22px;
       }
